# rinha_back_2024_q1_python

./: .dockerignore  .env.test  Dockerfile  README.md  app.py  docker-compose.test.yml  docker-compose.yml  init_clientes.sql  meu-teste-local.sh  nginx.conf  notes.md  pyproject.toml  requests.http  run.py
load-test/user-files/simulations/rinhabackend/: MySimulation.scala
old/: async_app.py  sol00.py  sol01.py  sol03.py  sol04.py  sol05.py  sol06.py
