[tool.poetry]
name = "@rinha-back-2024-q1-python"
version = "0.1.0"
description = ""
authors = ["taciossbr <contato@tacioss.dev>"]
readme = "README.md"
# packages = [{include = "@rinha_back_2024_q1_python"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = {extras = ["async"], version = "^3.0.2"}
psycopg = {extras = ["binary"], version = "^3.1.18"}
psycopg-pool = "^3.2.1"
gunicorn = "^21.2.0"
gevent = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
